[package]
name = "hyperlane-time"
version = "0.7.8"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A library for fetching the current time based on the system's locale settings."""
keywords = ["time", "hyperlane", "day", "format", "lang"]
repository = "https://github.com/hyperlane-dev/hyperlane-time.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
